--- a/app/web/package.json
+++ b/app/web/package.json
@@ -3,16 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.19",
-    "@types/node": "12.11.1",
-    "@types/react": "16.9.7",
-    "@types/react-autosuggest": "^9.3.11",
-    "@types/react-dom": "16.9.2",
+    "axios": "^0.19.0",
+    "ramda": "^0.26.1",
     "react": "^16.10.2",
-    "react-autosuggest": "^9.4.3",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "typescript": "3.6.4"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
